src/chrome_ext/css/ytvpStyle.css
.ytVideoPreview-ratingActive .ytVideoPreview-ratingContainer {
	display: block;
}
.ytVideoPreview-ratingContainer {
	margin: 0;
	padding: 0;
	position: absolute;
	bottom: 0;
	top: auto;
	left: 0;
	display: none;
    width: 100%;
}
.ytVideoPreview-ratingContainer > div {
	float: left;
}
.ytVideoPreview-ratingContainer .ytVideoPreview-ratingLikes {
	background: #1b7fcc;
}
.ytVideoPreview-ratingContainer .ytVideoPreview-ratingDislikes {
	background: #CCC;
}
/*rating bar height, by default is 4px*/
.ytVideoPreview-ratingHeight4, .ytVideoPreview-ratingHeight4 > div {
    height: 4px;
}
/*rating bar height, custom classes for perf, 3px*/
.ytVideoPreview-ratingHeight3, .ytVideoPreview-ratingHeight3 > div {
    height: 3px;
}
/*rating bar height, custom classes for perf, 5px*/
.ytVideoPreview-ratingHeight5, .ytVideoPreview-ratingHeight5 > div {
    height: 5px;
}
/*rating bar height, custom classes for perf, 6px*/
.ytVideoPreview-ratingHeight6, .ytVideoPreview-ratingHeight6 > div {
    height: 6px;
}
/*rating bar height, custom classes for perf, 7px*/
.ytVideoPreview-ratingHeight7, .ytVideoPreview-ratingHeight7 > div {
    height: 7px;
}
.yt-thumb-default-370 .ytVideoPreview-ratingContainer {
	max-width: 370px;
	width: 370px;
}
.yt-thumb-default-189 .ytVideoPreview-ratingContainer {
	max-width: 189px;
	width: 189px;
}
.yt-thumb-default-185 .ytVideoPreview-ratingContainer {
	max-width: 185px;
	width: 185px;
}
.yt-thumb-default-106 .ytVideoPreview-ratingContainer {
	max-width: 106px;
	width: 106px;
}
.yt-thumb-default-128 .ytVideoPreview-ratingContainer {
	max-width: 128px;
	width: 128px;
}
.yt-thumb-default-64 .ytVideoPreview-ratingContainer {
	max-width: 64px;
	width: 64px;
}

